# cloud-storage-signature

./: Cargo.toml  README.md
examples/image-uploader/: .gitignore  Cargo.toml  Dockerfile  README.md  _env  cors-configuration.json  index.html  set-cloud-storage-cors-config.sh
examples/image-uploader/src/: main.rs
src/: builder.rs  html_form_data.rs  lib.rs  private.rs  signed_url.rs  signing_key.rs
src/private/: active_datetime.rs  bound_token.rs  canonical_request.rs  credential_scope.rs  date.rs  expiration.rs  http_verb.rs  location.rs  policy_document.rs  request_type.rs  service.rs  signed_url.rs  signing_algorithm.rs  signing_key_inner.rs
src/private/policy_document/: condition.rs  expiration.rs  field.rs
src/private/utils/: unix_timestamp.rs
src/src/: lib.rs
tests/: lib.rs  v0_6.rs
