[package]
name = "cloud-storage-signature"
version = "0.6.16"
authors = ["bouzuya <m@bouzuya.net>"]
description = "A Cloud Storage signature utils"
edition = "2021"
exclude = [".github", "docs", "examples"]
keywords = ["storage", "gcloud", "google", "cloud"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bouzuya/cloud-storage-signature"

[dependencies]
async-trait = "0.1.87"
base64 = "0.22.1"
chrono = "0.4.40"
form_urlencoded = "1.2.1"
http = "1.2.0"
pem = "3.0.5"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls"] }
ring = "0.17.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha256 = "1.6.0"
thiserror = "2"
tokio = "1.43.0"
url = "2.5.4"

[dev-dependencies]
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "multipart",
] }
serial_test = "3"
temp-env = "0.3"
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"
