[package]
name = "cloud-storage-signature"
version = "0.6.20"
authors = ["bouzuya <m@bouzuya.net>"]
description = "A Cloud Storage signature utils"
edition = "2021"
exclude = [".github", "docs", "examples"]
keywords = ["storage", "gcloud", "google", "cloud"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bouzuya/cloud-storage-signature"

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = "0.4.41"
form_urlencoded = "1.2.2"
http = "1.3.1"
pem = "3.0.5"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls"] }
ring = "0.17.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha256 = "1.6.0"
thiserror = "2"
tokio = "1.47.1"
url = "2.5.7"

[dev-dependencies]
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "multipart",
] }
serial_test = "3"
temp-env = "0.3"
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"
