[package]
name = "image-uploader"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.81"
axum = "0.7.5"
cloud-storage-signature = { path = "../.." }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
uuid = { version = "1.8.0", features = ["v4"] }
